--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,11 +41,6 @@ body {
     margin-top: 5px;
 }
 
-.website_logo {
-}
-.header_nav {
-}
-
 .header_nav ul {
     display: flex;
 }
@@ -62,9 +57,6 @@ body {
     box-shadow: 1px 3px 11px -1px rgba(0,0,0,0.75);
 }
 
-.header_interaction_icons {
-}
-
 .header_interaction_icons img {
     height: 15px;
     width: 15px;
@@ -78,9 +70,6 @@ body {
 
 
 /*--------------------------------Main*/
-
-.main {
-}
 
 .main_screen {
     max-height: 700px;
@@ -284,6 +273,8 @@ body {
     margin-left: 33px;
 }
 
+/*First screen*/
+
 .additional_info-screen {
     position: relative;
     margin-top: 60px;
@@ -293,7 +284,7 @@ body {
     position: absolute;
     z-index: 3;
     top: 11%;
-    right: 25%;
+    right: 30%;
 
     font-family: 'Proto-sans';
     font-style: normal;
@@ -335,6 +326,27 @@ body {
     z-index: 1;
 }
 
+/*Second screen*/
+
+.second_additional_info-header {
+    position: absolute;
+    left: 17%;
+    top: 47%;
+
+    font-family: 'Proto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.second_additional_info-header span {
+    color: white;
+}
+
 .second_text_block {
     display: flex;
     flex-direction: column;
@@ -374,8 +386,138 @@ body {
     margin: 0 17px;
 }
 
+/*Third screen*/
+.additional_info-screen-third {
+    flex-direction: column;
+}
 
+.additional_info-screen-third h3 {
+    position: absolute;
+    left: 53%;
+    top: 43%;
+    color: white;
+    font-family: 'Proto-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+}
+.additional_info-screen-third span {
+    color: #141414;
+}
+
+.third_screen_column-one {
+    max-height: 540px;
+    max-width: 270px;
+    margin: 0px 5px;
+}
+.third_screen_column-two {
+    max-width: 540px;
+    max-height: 770px;
+    margin: 0px 5px;
+}
+.third_screen_column-three {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 770px;
+    max-width: 270px;
+    margin: 0px 5px;
+}
+
+.third_screen-text {
+    margin-top: 20px;
+}
+
+.third_screen-text p {
+    font-family: 'Jura';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+
+/*Wear types*/
+
+.wear_types {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 116px;
+}
+
+.wear_type {
+    height: 380px;
+    width: 250px;
+    margin: 0px 30px;
+    transition: 0.5s;
+}
+.wear_type:hover {
+    transform: scale(1.05);
+}
+
+
+.wear_type p {
+    text-align: center;
+    font-family: 'Jura';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;    
+}
 
 /*------------------------------Footer*/
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 288px;
+    width: 100%;
+    margin-top: 65px;
+    color: white;
+    font-family: 'Proto-sans';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    background-color: #141414;
+}
+
+.footer p {
+    color: rgba(207, 207, 207, 0.823);
+    font-size: 12px;
+    margin: 4px 0px;
+}
+
+.footer_container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.footer h4 {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.phones {
+    margin-top: 15px;
+}
+
+.footer_brand_info p {
+    max-width: 242px;
+}
+
+.footer_contact_links {
+    max-width: 250px;
+}
+
+.footer_contact_links p {
+    margin: 25px 0;
+}
+
+.footer_contact-icons img {
+    margin-right: 10px;
 }
